--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-    <h1>GilmaR Ornelas do Amaral</h1>
-    <p>Oi papai, te amo</p>
+    <h1>Gilmar Ornelas do Amaral</h1>
+    <p>Oi papai, feliz dia dos pais!</p>
 		<br>
 		<p>Assinado: Clara Marques Amaral</p>
   </body>
